--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,33 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_with model: @user, url:  user_registration_path, id: 'new_user', class: 'registration-main', local: true do |f| %>
+<%# <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+
+  <div class="field">
+    <%= f.label :ニックネーム %><br />
+    <%= f.text_field :nickname, placeholder:"例) クレスト太郎", maxlength:"20" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :街区 %><br />
+    <%= f.collection_select(:building_id, Building.all, :id, :name, {}, {class:"select-box", id:"user-buidlding"}) %>
+  </div>
+
+  <div class="field">
+    <%= f.label :部屋番号 %><br />
+    <%= f.text_field :room, maxlength:"4" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :姓 %><br />
+    <%= f.text_field :family_name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :名 %><br />
+    <%= f.text_field :first_name %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -9,15 +35,15 @@
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :パスワード %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(<%= @minimum_password_length %> 文字以上でお願いします)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :パスワード（確認） %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
