--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,9 @@
 <%= render "shared/header" %>
 
 <%= form_with model: @event, id: 'new_edit',local: true do |f| %>
+
+  <%= f.file_field :image %>
+
   <div class="field">
     <%= f.label :イベント名 %><br />
     <%= f.text_area :name, placeholder:"イベント名（必須 40文字まで)", maxlength:"40" %>
@@ -42,3 +45,4 @@
   </div>
   <%= f.submit "提案する" %>
 <% end %>
+<%=link_to 'もどる', root_path, class:"back-btn" %>
