--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,13 +6,17 @@
   <div class='nav'>
     
     <ul class='lists-right'>
-      <% if user_signed_in? %>
+      <% if user_signed_in?  %>
         <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li> 
         <li><%= link_to 'ログアウト', destroy_user_session_path , method: :delete, class: "logout"  %></li>
+        <% if current_user.role_id == 2 %>
+          <li><%= link_to '役員登録', users_path %></li> 
+        <% end %>
       <% else %>
         <li><%= link_to 'ログイン',  new_user_session_path, class: "login" %></li>
         <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
       <% end %>
     </ul>
   </div>
+  -----------------------------------------------------------------------------------------
 </header>
