--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -2,9 +2,7 @@
 
 <%= form_with model: @event, id: 'new_edit',local: true do |f| %>
 
-  <%#= f.file_field :image %>
-
-  <div class="field">
+<div class="field">
     <%= f.label :イベント名 %><br />
     <%= f.text_area :name, placeholder:"イベント名（必須 40文字まで)", maxlength:"40" %>
   </div>
@@ -43,6 +41,6 @@
     <%= f.label :参加費 %><br />
     <%= f.text_area :price, placeholder:"参加費が必要な場合は記入して下さい" %>
   </div>
-  <%= f.submit "提案する" %>
+  <%= f.submit "更新する" %>
 <% end %>
 <%=link_to 'もどる', root_path, class:"back-btn" %>
