--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -17,25 +17,32 @@
 <h3>参加費</h3>
 <%= @event.price%><br>
 
-<% if user_signed_in? %>
-  <% if current_user.role_id == 2 %>
-    <% if @approvals.pluck(:user_id).include?(current_user.id) %>
-      <%= link_to "投票を変更する", edit_event_approval_path(@event, @approvals) %>
-    <% elsif %>
-      <%= link_to "投票する", event_approvals_path(@event) %>
+<% if @event.event_date < Date.today %>
+  <% if user_signed_in? %>
+    <% if current_user.role_id == 2 %>
+      <% if @approvals.where(pros_and_cons_id: 2).count < 1 %>
+        <% if @approvals.pluck(:user_id).include?(current_user.id) %>
+          <%= link_to "投票を変更する", edit_event_approval_path(@event, @approvals) %>
+        <% elsif %>
+          <%= link_to "投票する", event_approvals_path(@event) %>
+        <% end %>
+      <% end %>
     <% end %>
-  <% end %>
 
-  <% if current_user.id == @event.user_id  || current_user.role_id == 2 %>
-    <%= link_to "編集する", edit_event_path(@event.id) %>
-
-  <h2>投票状況</h2>
-  現在の賛成者数<%= @approvals.where(pros_and_cons_id: 2).count %>人<br>
-  あと<%= 1 - @approvals.where(pros_and_cons_id: 2).count %>人の賛成で開催になります<br>
-  **********************************************************************<br>
-    <% @approvals.each do |approval| %>
-      <%= approval.user.nickname %>さん：<%= approval.pros_and_cons.name %>
-      <h3><%= approval.opinion %></h3>
+    <% if current_user.id == @event.user_id  || current_user.role_id == 2 %>
+      <%= link_to "編集する", edit_event_path(@event.id) %>
+        <% if @approvals.where(pros_and_cons_id: 2).count < 1 %>
+          <h2>投票状況</h2>
+          現在の賛成者数<%= @approvals.where(pros_and_cons_id: 2).count %>人<br>
+          あと<%= 1 - @approvals.where(pros_and_cons_id: 2).count %>人の賛成で開催になります<br>
+          **********************************************************************<br>
+          <% @approvals.each do |approval| %>
+            <%= approval.user.nickname %>さん：<%= approval.pros_and_cons.name %>
+            <h3><%= approval.opinion %></h3>
+          <% end %>
+        <% elsif %>
+        <h2>開催決定！！</h2>
+        <% end %>
     <% end %>
   <% end %>
 <% end %>
