--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -26,7 +26,7 @@
 
   <div class="field">
     <%= f.label :開催時間（希望開始時間） %><br />
-    <%= f.time_select :event_date, placeholder:"希望の開催時間があれば選択して下さい" %>
+    <%= f.time_select :event_time, placeholder:"希望の開催時間があれば選択して下さい" %>
   </div>
 
   <div class="field">
