コメント一覧の時間表示変更

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -49,7 +49,7 @@
           <h4>＜コメント一覧＞</h4>
             <% @event.pre_comments.each do |pre_comment| %>
               <div class="comment">
-                <p class="user-info"><%= l pre_comment.created_at %> ： <%= pre_comment.user.nickname %> </p>
+                <p class="user-info"><%= l pre_comment.created_at, format: :long %> ： <%= pre_comment.user.nickname %> </p>
                 <p><%= pre_comment.content%></p>
                 -----------------------------------------------------
               </div>
