--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -58,6 +58,21 @@
         <h2>開催決定！！</h2>
         <% end %>
     <% end %>
+
+    <% if current_user.id == @event.user_id  || current_user.role_id == 2 %>
+      <%= form_with model: [@event, @pre_comment], id: "comment-form" do |f| %>
+        <%= f.text_area :content , class: "comment-text"%>
+        <%= f.submit "コメントをする", class: "comment-submit" %>
+      <% end %>
+        <h4>＜コメント一覧＞</h4>
+      <% @event.pre_comments.each do |pre_comment| %>
+        <div class="comment">
+          <p class="user-info"><%= l pre_comment.created_at, format: :long %> ： <%= pre_comment.user.nickname %> </p>
+          <p><%= pre_comment.content%></p>
+          -----------------------------------------------------
+        </div>
+      <% end %>
+    <% end %>
   <% end %>
 <% end %>
 <%=link_to 'トップページ', root_path %>
