--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -58,19 +58,20 @@
         <h2>開催決定！！</h2>
         <% end %>
     <% end %>
-
-    <% if current_user.id == @event.user_id  || current_user.role_id == 2 %>
-      <%= form_with model: [@event, @pre_comment], id: "comment-form" do |f| %>
-        <%= f.text_area :content , class: "comment-text"%>
-        <%= f.submit "コメントをする", class: "comment-submit" %>
-      <% end %>
-        <h4>＜コメント一覧＞</h4>
-      <% @event.pre_comments.each do |pre_comment| %>
-        <div class="comment">
-          <p class="user-info"><%= l pre_comment.created_at, format: :long %> ： <%= pre_comment.user.nickname %> </p>
-          <p><%= pre_comment.content%></p>
-          -----------------------------------------------------
-        </div>
+    <% if @approvals.where(pros_and_cons_id: 2).count >= 1 %>
+      <% if current_user.id == @event.user_id  || current_user.role_id == 2 %>
+        <%= form_with model: [@event, @before_comment], id: "comment-form" do |f| %>
+          <%= f.text_area :content , class: "comment-text"%>
+          <%= f.submit "コメントをする", class: "comment-submit" %>
+        <% end %>
+          <h4>＜コメント一覧＞</h4>
+        <% @event.before_comments.each do |before_comment| %>
+          <div class="comment">
+            <p class="user-info"><%= l before_comment.created_at, format: :long %> ： <%= before_comment.user.nickname %> </p>
+            <p><%= before_comment.content%></p>
+            -----------------------------------------------------
+          </div>
+        <% end %>
       <% end %>
     <% end %>
   <% end %>
