--- a/app/views/participations/index.html.erb
+++ b/app/views/participations/index.html.erb
@@ -2,6 +2,8 @@
 <%= @event.name %>
 
 <%= form_with model: @participation ,url: event_participations_path(@event), local: true do |f| %>
+  <%= f.label :お名前（本名でお願いします） %><br />
+  <%= f.text_field :name %><br />
   <%= f.label :参加方法 %><br />
   <%= f.collection_select(:choice_id, Choice.all, :id, :name, {}) %><br />
   <%= f.label :参加人数（お子様も参加される場合はご記入お願いします） %><br />
