ビューの設定

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -38,10 +38,10 @@
           現在の賛成者数<%= @approvals.where(pros_and_cons_id: 2).count %>人<br>
           あと<%= 1 - @approvals.where(pros_and_cons_id: 2).count %>人の賛成で開催になります<br>
           **********************************************************************<br>
-          <% @approvals.each do |approval| %>
-            <%= approval.user.nickname %>さん：<%= approval.pros_and_cons.name %>
-            <h3><%= approval.opinion %></h3>
-          <% end %>
+            <% @approvals.each do |approval| %>
+              <%= approval.user.nickname %>さん：<%= approval.pros_and_cons.name %>
+              <h3><%= approval.opinion %></h3>
+            <% end %>
             <%= form_with model: [@event, @pre_comment], id: "comment-form" do |f| %>
               <%= f.text_area :content , class: "comment-text"%>
               <%= f.submit "コメントをする", class: "comment-submit" %>
@@ -54,13 +54,18 @@
                 -----------------------------------------------------
               </div>
             <% end %>
-        <% else %>
-        <h2>開催決定！！</h2>
-        <%= link_to "参加する（実行係と一般参加を選べます）", event_participations_path(@event) %>
         <% end %>
+        
     <% end %>
+    <h2>開催決定！！</h2>
+      <% if @participation.pluck(:user_id).include?(current_user.id) %>
+          <%= link_to "編集する（参加登録済みの方はこちらから変更できます", edit_event_participation_path(@event.id) %>
+        <% else %>
+          <%= link_to "参加する（実行係と一般参加を選べます）", event_participations_path(@event) %><br>
+      <% end %>
+    
     <% if @approvals.where(pros_and_cons_id: 2).count >= 1 %>
-      <% if current_user.id == @event.user_id  || current_user.role_id == 2 %>
+      <% if current_user.id == @event.user_id  || current_user.role_id == 2 || @participation.pluck(:user_id).include?(current_user.id) %>
         <%= form_with model: [@event, @before_comment], id: "comment-form" do |f| %>
           <%= f.text_area :content , class: "comment-text"%>
           <%= f.submit "コメントをする", class: "comment-submit" %>
