--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<h2>新規登録</h2>
 
 <%= form_with model: @user, url:  user_registration_path, id: 'new_user', class: 'registration-main', local: true do |f| %>
 <%# <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -48,7 +48,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "登録" %>
   </div>
 <% end %>
 
