--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,7 @@
       <% if user_signed_in?  %>
         <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li> 
         <li><%= link_to 'ログアウト', destroy_user_session_path , method: :delete, class: "logout"  %></li>
-        <% if current_user.role_id == 2 %>
+        <% if current_user.role_id == 2 || current_user.id == 1 %>
           <li><%= link_to '役員登録', users_path %></li> 
         <% end %>
       <% else %>
