--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -77,6 +77,7 @@
           <%= f.text_area :content , class: "comment-text"%>
           <%= f.submit "コメントをする", class: "comment-submit" %>
         <% end %>
+        <div id="before_comments">
           <h4>＜コメント一覧＞</h4>
         <% @event.before_comments.each do |before_comment| %>
           <div class="comment">
@@ -85,6 +86,7 @@
             -----------------------------------------------------
           </div>
         <% end %>
+        </div>
       <% end %>
     <% end %>
   <% end %>
