--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -102,6 +102,7 @@
           <%= f.submit "コメントをする", class: "comment-submit" %>
         <% end %>
     <% end %>
+    <div id="after_comments">
     <h4>＜コメント一覧＞</h4>
     <% @event.after_comments.each do |after_comment| %>
       <div class="comment">
@@ -111,6 +112,7 @@
         -----------------------------------------------------
       </div>
     <% end %>
+    </div>
   <% end %>
 <% end %>
 <%=link_to 'トップページ', root_path %>
